refactor(domain): normaliza nome removendo espaços e melhorando validação